Update purecss to v3 and fix word-wrap

--- a/bundles/kleframework/css/base/kle.css
+++ b/bundles/kleframework/css/base/kle.css
@@ -21,7 +21,7 @@ a, a:link {
     }
 
 main {
-    text-wrap: break-word;
+    word-wrap: break-word;
 }
 
 p {
